      \sQuote{Writing R Extensions} §6 should not be affected.

      \item The legacy S-compatibility macros \code{PROBEM},
      \code{MESSAGE}, \code{ERROR}, \code{WARN}, \code{WARNING},
      \code{RECOVER}, \dots{} are deprecated and are no longer defined
      by default in \file{R_exts/RS.h} (included by \file{R.h}).
      Replace these by calls to \code{Rf_error} and \code{Rf_warning}.
      For the time being the definitions can be reinststated by defining
      macro \code{R_LEGACY_S_DEFS} to \code{1} \emph{before} including
      any \R{} header. [Early warning: removal planned for Oct 8.]
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
    \itemize{
      \item The (non-default and deprecated) \code{method = "internal"}
      for \code{download.file} and \code{url} no longer supports
      \samp{http://} nor \samp{ftp://} URIs.  (It is used only for
      \samp{file://} URIs.)

      On Windows, \code{download.file(method = "wininet")} no longer
      supports \samp{ftp://} URIs.  (It is no longer the default method,
      which is \code{"libcurl"} and does.)

      On Windows, the deprecated \code{method = "wininet"} now gives a
      warning for \samp{http://} and \samp{https://} URIs for both
      \code{download.file} and \code{url}. (It is no longer the default
      method.)
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item Setting \code{digits = 0} in \code{format()},
      \code{print.default()} (and hence typically \code{print()}) or
      \code{options()} is again invalid.  Its behaviour was
      platform-dependent, and it is unclear what \dQuote{zero
	significant digits} should mean (\PR{18098}).

      \item Messages from C code in the \file{cairo} section of package
      \pkg{grDevices} are now also up for translation, thanks to Michael
      Chirico's \PR{18123}.

      \item \code{mean(x)} with finite \code{x} now is finite also without
      "long.double" capability.
