@@ -119,9 +119,13 @@
       \code{RECOVER}, \dots{} are deprecated and are no longer defined
       by default in \file{R_exts/RS.h} (included by \file{R.h}).
       Replace these by calls to \code{Rf_error} and \code{Rf_warning}.
-      For the time being the definitions can be reinststated by defining
+
+      For the time being the definitions can be reinstated by defining
       macro \code{R_LEGACY_S_DEFS} to \code{1} \emph{before} including
-      any \R{} header. [Early warning: removal planned for Oct 8.]
+      any \R{} header.  Header \file{R_ext/RS.h} will no longer include
+      \file{R_ext/Error.h} unless \code{R_LEGACY_S_DEFS} is set.
+
+      [Early warning: removal planned for Oct 8.]
     }
   }
 
